fix: [PL-21508]: Error message overflowing fix (#7588)

--- a/src/modules/10-common/modals/ProgressOverlay/ProgressOverlay.module.scss
+++ b/src/modules/10-common/modals/ProgressOverlay/ProgressOverlay.module.scss
@@ -23,6 +23,7 @@
 .finalLabel {
   overflow: auto;
   text-overflow: ellipsis;
+  word-break: break-all;
   max-width: 40vw;
   max-height: 20vh;
 }
